create stock module
