# src/modules/stock/entity/interfaces/IStock.interface.ts
@@ -1,0 +1,8 @@
+export interface IStock {
+    quantity: number;
+    costValue: number;
+    saleValue: number;
+    purchaseDate: Date;
+    productId: string;
+    userId: string;
+}
